Normalize line endings

--- a/templates/base.html
+++ b/templates/base.html
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
     {% load static %} 
-    <title>{% block title %}My Chatbot{% endblock %}</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    
+    <title>{% block title %}CURIO{% endblock %}</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+    
 
     <style>
         body {
