--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,5 +1,5 @@
 body {
-    background: url('https://www.pixelstalk.net/wp-content/uploads/2016/05/Futuristic-Tech-Wallpapers-Images.jpg') no-repeat center center fixed;
+    background: url('/static/images/bg.jpg') no-repeat center center fixed;
     background-size: cover;
     color: #c9d1d9;
     font-family: 'Poppins', sans-serif;
